--- a/index.html
+++ b/index.html
@@ -197,26 +197,35 @@
 
   /* ===== iPhone-уведомление (БЕЗ изменений стиля) ===== */
   .ios-banner{
-    position:fixed; left:50%; top: calc(env(safe-area-inset-top) + 6px);
+    position:fixed;
+    left:50%;
+    top: calc(env(safe-area-inset-top) + 6px);
     transform: translate(-50%, -140%);
-    width: calc(100vw - 24px); max-width:600px;
-    background: linear-gradient(180deg, rgba(190,198,208,.94), rgba(140, 144, 148, 0.96));
-    color:#000; border-radius:26px; padding:12px 16px; box-shadow:0 18px 28px rgba(0,0,0,.25);
-    display:flex; align-items:flex-start; gap:12px; transition: transform .5s cubic-bezier(.2,.9,.2,1.1); z-index:20; border:1px solid rgba(0,0,0,.05);
-    backdrop-filter: saturate(180%) blur(22px);
-    touch-action: manipulation;
+    width: calc(100vw - 24px);
+    max-width: 600px;
+    background: linear-gradient(180deg, rgba(255, 255, 255, .94), rgba(235, 238, 243, .95));
+    color: #000;
+    border-radius: 18px;
+    padding: 10px 14px;
+    box-shadow: 0 18px 28px rgba(0, 0, 0, .25);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    transition: transform .5s cubic-bezier(.2,.9,.2,1.1);
+    z-index: 20;
+    border: 1px solid rgba(0, 0, 0, .08);
   }
   .ios-banner.show{ transform: translate(-50%, 0); }
-  .ios-avatar{ width:44px; height:44px; border-radius:50%; background:linear-gradient(180deg,#989ba0,#cbd1d9); display:grid; place-items:center; flex:0 0 44px; position:relative; }
-  .ios-avatar::before{ content:""; position:absolute; top:9px; left:50%; transform:translateX(-50%); width:16px; height:16px; border-radius:50%; background:linear-gradient(#fff,#e9eef5); box-shadow:inset 0 0 0 1px rgba(0,0,0,.06); }
-  .ios-avatar::after{ content:""; position:absolute; bottom:7px; left:50%; transform:translateX(-50%); width:28px; height:14px; border-radius:10px/7px; background:linear-gradient(#fff,#e9eef5); box-shadow:inset 0 0 0 1px rgba(0,0,0,.04); }
+  .ios-avatar{ flex:0 0 auto; position:relative; }
+  .ios-avatar::before, .ios-avatar::after{ content:none; }
+  .ios-avatar-img{ display:block; height:44px; width:auto; }
   .ios-content{ flex:1; min-width:0; }
   .ios-top{ display:flex; justify-content:space-between; align-items:center; margin-top:2px; }
-  .ios-sender{ font-weight:700; font-size:22px; letter-spacing:.2px; line-height:1; font-variant-numeric: tabular-nums; }
+  .ios-sender{ font-weight:700; font-size:16px; }
   .ios-time{ font-size:15px; opacity:.55; line-height:1; }
-  .ios-text{ margin-top:6px; line-height:1.25; font-size:17px; font-weight:500; }
-  .ios-imsg{ position:absolute; left:-7px; bottom:-5px; width:20px; height:20px; border-radius:5px; background:#31d158; display:inline-block; box-shadow: inset 0 -2px 0 rgba(0,0,0,.12), 0 0 0 1px rgba(0,0,0,.06); }
-  .ios-imsg::after{ content:""; position:absolute; inset:0; margin:auto; width:12px; height:12px; border-radius:4px; background:linear-gradient(#fff,#f4f7fb); box-shadow:inset 0 -1px 0 rgba(0,0,0,.08); }
+  .ios-text{ margin-top:2px; line-height:1.28; font-size:15px; }
+  .ios-imsg{ display:none !important; }
+  .ios-imsg::after{ content:none; }
 
   .toast{
     position:fixed; left:50%; bottom: calc(24px + env(safe-area-inset-bottom));
@@ -238,7 +247,7 @@
 
   <!-- СМС (как раньше) -->
   <div class="ios-banner" id="iosBanner" role="button" tabindex="0" aria-label="Уведомление СМС">
-    <div class="ios-avatar" aria-hidden="true"><span class="ios-imsg" aria-hidden="true"></span></div>
+    <div class="ios-avatar" aria-hidden="true"><img src="avatar.png" alt="" class="ios-avatar-img"></div>
     <div class="ios-content">
       <div class="ios-top">
         <div class="ios-sender">900</div>
