--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 
     const text = document.createElement('div');
     text.className = 'ios-text';
-    const bodySpan = document.createElement('span'); bodySpan.id = 'iosBodyExtra'; bodySpan.textContent = 'Оно так не работает';
+    const bodySpan = document.createElement('span'); bodySpan.id = 'iosBodyExtra'; bodySpan.textContent = 'Оно так не работает, зато есть старый советский.....';
     text.appendChild(bodySpan);
 
     content.appendChild(top);
